--- a/Index.html
+++ b/Index.html
@@ -49,7 +49,7 @@
     <p>Ela abre os olhos lentamente. O quarto ainda guarda restos da noite — silêncio pesado, sombras alongadas nas paredes. Pela janela, o sol atravessa as frestas como lâminas douradas, recortando o pó suspenso no ar.</p>
     <p>Deitada, demora alguns segundos para se reconhecer no próprio corpo. Estica o braço, sente o frio da cama ao lado vazio. Suspira.</p>
     <p>— Mais um sábado. — a voz sai baixa, quase um sussurro.</p>
-    <p>A cidade lá fora já pulsa: buzina de Kombi, o vendedor de gás, passos correndo para a padaria. O mundo desperto, e ela ainda tentando entender por que levantar.</p>
+    <p>A cidade lá fora já pulsa: buzina dos carros, o vendedor de gás, passos correndo para a padaria. O mundo desperto, e ela ainda tentando entender por que levantar.</p>
     <em>O tempo não espera. Eu já perdi tanto tentando segurá-lo, e ainda assim acordo atrasada para a vida.</em>
 
     <h2>2. A Travessia</h2>
