--- a/Index.html
+++ b/Index.html
@@ -61,7 +61,7 @@
     <em>Se eu saltasse na próxima estação sem rumo, talvez enfim descobrisse quem sou. Ou talvez só mudasse o cenário do mesmo vazio.</em>
 
     <h2>3. A Praça</h2>
-    <p>O calor a recebe como um abraço sufocante. Ela atravessa a rua até a praça central, onde uma fonte jorra água cristalina. Crianças correm, pombos levantam voo, vendedores oferecem balas e lembranças baratas.</p>
+    <p>Saindo da estação o calor a recebe como um abraço sufocante. Ela atravessa a rua até a praça central, onde uma fonte jorra água cristalina. Crianças correm, pombos levantam voo, vendedores oferecem balas e lembranças baratas.</p>
     <p>Ela se senta em um banco de madeira gasto. O sol bate pela metade, a sombra de uma árvore divide seu corpo em luz e escuridão.</p>
     <p>Ela observa o mundo. Um casal briga em voz baixa. Um idoso joga milho aos pombos com paciência de séculos. Uma jovem fotografa o céu sem olhar para o céu.</p>
     <em>Solidão não é estar só. É ser invisível entre tantos.</em>
@@ -91,7 +91,7 @@
     <h2>7. O Pôr do Sol</h2>
     <p>A areia de Ipanema está fria sob os pés. O sol mergulha no mar lentamente. O céu arde em cores — laranja, vermelho, roxo, azul escuro. As pessoas batem palmas, como se o espetáculo fosse único.</p>
     <p>Ela permanece quieta.</p>
-    <em>Se hoje fosse o fim, este seria meu epitáfio: "viveu à beira do mar, mas nunca mergulhou inteiro".</em>
+    <em>Se hoje fosse o fim, este seria meu epitáfio: "viveu à beira do mar, mas nunca mergulhou por inteiro".</em>
     <p>O mar toca seus tornozelos. A espuma sobe e recua. Ela olha o horizonte e sente medo e ternura.</p>
     <em>Quantos dias iguais passarão despercebidos até que não sobrem dias?</em>
     <p>A noite cai. As luzes da cidade acendem como estrelas nervosas. Ela se levanta, caminha de volta.</p>
