--- a/Index.html
+++ b/Index.html
@@ -41,9 +41,27 @@
       background: #eee;
       margin-top: 60px;
     }
+
+    .capa {
+      text-align: center;
+    }
+    .capa img {
+      max-width: 300px;
+      margin-top: 20px;
+    }
+    .capa h1 {
+      margin: 20px 0 0;
+    }
+    .capa p {
+      font-style: italic;
+      color: #555;
+    }
   </style>
 </head>
 <body>
+  <section class="capa capitulo ativo">
+      <img src="imagem/capa.png" alt="Capa do livro">
+  </section>
   <main>
     <h2>1. O Despertar</h2>
     <p>Ela abre os olhos lentamente. O quarto ainda guarda restos da noite — silêncio pesado, sombras alongadas nas paredes. Pela janela, o sol atravessa as frestas como lâminas douradas, recortando o pó suspenso no ar.</p>
