--- a/Index.html
+++ b/Index.html
@@ -114,7 +114,7 @@
     <h1>Sábado em Fragmentos</h1>
     <p>Uma narrativa literária</p>
     <!-- Tente primeiro com o caminho original -->
-    <img src="imagem/capa.png" alt="Capa do livro" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+    <img src="Imagem/capa.png" alt="Capa do livro" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
     <!-- Placeholder caso a imagem não carregue -->
     <div class="image-placeholder" style="display: none;">
       Capa do livro<br>"Sábado em Fragmentos"
